[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Healthunder.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Healthprogress.png" type="Texture" id=2]
[ext_resource path="res://UI/playerTopUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/playerhud.png" type="Texture" id=4]
[ext_resource path="res://Assets/Character Sprites/playerAvatar.png" type="Texture" id=5]
[ext_resource path="res://Assets/PixelRPG.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 6 )

[node name="PlayerHud" type="Node2D"]
script = ExtResource( 3 )

[node name="StaminaBar" type="TextureProgress" parent="."]
margin_left = 24.9058
margin_top = 17.8731
margin_right = 40.9058
margin_bottom = 18.8731
rect_scale = Vector2( 3, 4 )
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0, 0.298039, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 25.0
margin_top = 10.0
margin_right = 41.0
margin_bottom = 11.0
rect_scale = Vector2( 3, 4 )
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDUI" type="TextureRect" parent="."]
margin_right = 80.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" type="TextureRect" parent="."]
margin_left = 1.47157
margin_top = 2.31247
margin_right = 32.4716
margin_bottom = 28.3125
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="."]
margin_left = 20.8125
margin_top = 3.1875
margin_right = 54.8125
margin_bottom = 9.1875
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.0862745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Dovakiin0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="."]
margin_left = 18.4256
margin_top = 10.6945
margin_right = 26.4256
margin_bottom = 16.6945
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stamina" type="Label" parent="."]
margin_left = 8.95252
margin_top = 19.1103
margin_right = 37.9525
margin_bottom = 25.1103
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Stamina"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_left = 61.9936
margin_top = 24.171
margin_right = 90.9936
margin_bottom = 30.171
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "LVL: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXPLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 24.0
margin_right = 22.0
margin_bottom = 30.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "EXP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExperienceBar" type="TextureProgress" parent="."]
margin_left = 7.0
margin_top = 27.0
margin_right = 23.0
margin_bottom = 28.0
rect_scale = Vector2( 4.5, 1 )
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.12549, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
